--- a/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_1_Key.qmd
@@ -235,7 +235,7 @@ exp2 <- rbeta(1e4, 26.5, 10.5)
 quantile(exp2, probs = c(0.025, 0.5, 0.975))
 ```
 
-About 90% of humans are right handed. What would be a good prior for right-handedness if you were to test a sample of humans to see if there is an unusually large proportion of left-handed people in a sample (e.g., a sample of professional athletes)?
+About 90% of humans are right handed. What would be a good prior for right-handedness if you were to test a sample of humans to see if there is an unusually large proportion of left-handed people in a sample (e.g., a sample of professional athletes)? You can either use the plotting function from above to test out some distributions or write your own function below.
 
 > There is no one correct answer. Beta(3, 15) puts the mean at a little above 0.1. (10%). There is still a lot of mass above 20%, but little beyond 50%.
 
